--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width= device-width, initial-scale= 1">
-	<title></title>
+	<title>Welcome!</title>
 	<link href="css/styles.css" type="text/css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
 </head>
 <body>
-	
+	<div class="container">
+		<header>
+			<div class="logo">
+				<img src="img/logo.jpg" alt="logo">
+			</div>
+			<div class="title">
+				<h1>Suneet Mehta</h1>
+				<h2>Front-End Developer</h2>
+			</div>
+		</header>
+		<hr>
+		<main>
+			<img src="#">
+			<div id="ft-work">
+				<section></section>
+				<section></section>
+				<section></section>
+			</div>
+		</main>
+	</div>
 </body>
 </html>
