Shift to mobile-first development
Build mobile header

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 			</div>
 			<div class="title">
 				<h1>Suneet Mehta</h1>
-				<h2>Front-End Developer</h2>
+				<h4>Front-End Developer</h4>
 			</div>
 		</header>
 		<hr>
 		<main>
-			<img src="#">
+			<!-- <img src="#"> -->
 			<div id="ft-work">
 				<section></section>
 				<section></section>
