Add Quote img and 'ft-work' Heading

--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
 			</div>
 		</header>
 		<hr>
+		<br>
 		<main>
-			<!-- <img src="#"> -->
+			<img id="quote" src="img/quote.jpg"><br><br>
 			<div id="ft-work">
+				<div class="heading">
+					<hr>
+					<h2>Featured Work</h2>
+					<hr>
+				</div>
 				<section></section>
 				<section></section>
 				<section></section>
