Fill featured work field

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Welcome!</title>
 	<link href="css/styles.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Niramit:300" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -22,16 +23,37 @@
 		<hr>
 		<br>
 		<main>
-			<img id="quote" src="img/quote.jpg"><br><br>
+			<article>
+				<img id="quote" src="img/quote.jpg" alt="quote">
+			</article>
+				<br>
+				<br>
 			<div id="ft-work">
 				<div class="heading">
 					<hr>
 					<h2>Featured Work</h2>
 					<hr>
 				</div>
-				<section></section>
-				<section></section>
-				<section></section>
+				<section>
+					<img src="img/memory.jpg" alt="memory game">
+					<hr	size="170" width="1">
+					<p id="memory">Memory&nbsp;game</p>
+				</section>
+				<section>
+					<img src="img/arcade.png" alt="arcade game">
+					<hr	size="170" width="1">
+					<p id="arcade">Classic&nbsp;Arcade Game&nbsp;Clone</p>
+				</section>
+				<section>
+					<img src="img/feed.jpg" alt="feed reader">
+					<hr	size="170" width="1">
+					<p id="reader">Feed&nbsp;Reader Testing</p>
+				</section>
+				<section>
+					<img src="img/reviews.png" alt="restaurant review app">
+					<hr	size="170" width="1">
+					<p id="review">Restaurant&nbsp;Review App</p>
+				</section>
 			</div>
 		</main>
 	</div>
