Add favicon and change title

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+	<!-- Meta info -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width= device-width, initial-scale= 1">
-	<title>Welcome!</title>
+	
+	<title>Portfolio - Suneet Mehta</title>
+	<link rel="icon" href="favicon.png">
+
+	<!-- CSS -->
 	<link href="css/styles.css" type="text/css" rel="stylesheet">
+	
+	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Niramit:300" rel="stylesheet">
 </head>
@@ -34,22 +42,22 @@
 					<h2>Featured Work</h2>
 					<hr>
 				</div>
-				<section>
+				<section class="work">
 					<img src="img/memory.jpg" alt="memory game">
 					<hr	size="170" width="1">
 					<p id="memory">Memory&nbsp;game</p>
 				</section>
-				<section>
+				<section class="work">
 					<img src="img/arcade.png" alt="arcade game">
 					<hr	size="170" width="1">
 					<p id="arcade">Classic&nbsp;Arcade Game&nbsp;Clone</p>
 				</section>
-				<section>
+				<section class="work">
 					<img src="img/feed.jpg" alt="feed reader">
 					<hr	size="170" width="1">
 					<p id="reader">Feed&nbsp;Reader Testing</p>
 				</section>
-				<section>
+				<section class="work">
 					<img src="img/reviews.png" alt="restaurant review app">
 					<hr	size="170" width="1">
 					<p id="review">Restaurant&nbsp;Review App</p>
