--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width= device-width, initial-scale= 1">
 	
-	<title>Portfolio - Suneet Mehta</title>
+	<title>Portfolio | Suneet Mehta</title>
 	<link rel="icon" href="favicon.png">
 
 	<!-- CSS -->
@@ -28,7 +28,7 @@
 		</div>
 	</header>
 	<div class="container">
-		<hr>
+		<br>
 		<br>
 		<main>
 			<article>
@@ -65,5 +65,19 @@
 			</div>
 		</main>
 	</div>
+	<footer>
+		<div class="container-1">
+			<a href="https://github.com/Suneet-M" class="social">
+				<img src="icons/github.png" alt="github">
+			</a>
+			<a href="https://www.facebook.com/suneet.manish.mehta" class="social">
+				<img src="icons/facebook.png" alt="facebook">
+			</a>
+			<a href="https://twitter.com/QriouslyYours" class="social">
+				<img src="icons/twitter.png" alt="twitter" >
+			</a>
+		</div>
+		<p class="copyright">&copy; 2018, All rights reserved.</p>
+	</footer>
 </body>
 </html>
