Add Media Query >600px

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 				</div>
 				<section class="work">
 					<img src="img/memory.jpg" alt="memory game">
-					<hr	size="170" width="1">
+					<hr width="1">
 					<p id="memory">Memory&nbsp;game</p>
 				</section>
 				<section class="work">
 					<img src="img/arcade.png" alt="arcade game">
-					<hr	size="170" width="1">
+					<hr width="1">
 					<p id="arcade">Classic&nbsp;Arcade Game&nbsp;Clone</p>
 				</section>
 				<section class="work">
 					<img src="img/feed.jpg" alt="feed reader">
-					<hr	size="170" width="1">
+					<hr width="1">
 					<p id="reader">Feed&nbsp;Reader Testing</p>
 				</section>
 				<section class="work">
 					<img src="img/reviews.png" alt="restaurant review app">
-					<hr	size="170" width="1">
+					<hr width="1">
 					<p id="review">Restaurant&nbsp;Review App</p>
 				</section>
 			</div>
