Add media query >1000px
-added container inside header to limit content
-declarations' order changed in >700px media query to align with html code order

--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Niramit:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<div class="logo">
-			<img src="img/logo.jpg" alt="logo">
-		</div>
-		<div class="title">
-			<h1>Suneet Mehta</h1>
-			<h4>Front-End Developer</h4>
+		<div class="container-1">
+			<div class="logo">
+				<img src="img/logo.jpg" alt="logo">
+			</div>
+			<div class="title">
+				<h1>Suneet Mehta</h1>
+				<h4>Front-End Developer</h4>
+			</div>
 		</div>
 	</header>
 	<div class="container">
@@ -42,23 +45,23 @@
 					<h2>Featured Work</h2>
 					<hr>
 				</div>
-				<section class="work">
-					<img src="img/memory.jpg" alt="memory game">
+				<section>
+					<img src="img/memory.jpg" alt="memory game" class="work">
 					<hr width="1">
 					<p id="memory">Memory&nbsp;game</p>
 				</section>
-				<section class="work">
-					<img src="img/arcade.png" alt="arcade game">
+				<section>
+					<img src="img/arcade.png" alt="arcade game" class="work">
 					<hr width="1">
 					<p id="arcade">Classic&nbsp;Arcade Game&nbsp;Clone</p>
 				</section>
-				<section class="work">
-					<img src="img/feed.jpg" alt="feed reader">
+				<section>
+					<img src="img/feed.jpg" alt="feed reader" class="work">
 					<hr width="1">
 					<p id="reader">Feed&nbsp;Reader Testing</p>
 				</section>
-				<section class="work">
-					<img src="img/reviews.png" alt="restaurant review app">
+				<section>
+					<img src="img/reviews.png" alt="restaurant review app" class="work">
 					<hr width="1">
 					<p id="review">Restaurant&nbsp;Review App</p>
 				</section>
@@ -66,7 +69,7 @@
 		</main>
 	</div>
 	<footer>
-		<div class="container-1">
+		<div class="container-2">
 			<a href="https://github.com/Suneet-M" class="social">
 				<img src="icons/github.png" alt="github">
 			</a>
