--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
 			<a href="https://twitter.com/QriouslyYours" class="social">
 				<img src="icons/twitter.png" alt="twitter" >
 			</a>
+			<p class="copyright">
+				&copy; 2018, All rights reserved
+			</p>
 		</div>
-		<p class="copyright">&copy; 2018, All rights reserved.</p>
 	</footer>
 </body>
 </html>
