Make logo responsive (srcset)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 	<header>
 		<div class="container-1">
 			<div class="logo">
-				<img src="img/logo.jpg" alt="logo">
+					<img src="img/logo-small.jpg" alt="logo"
+						srcset="img/logo-small.jpg 1x,
+								img/logo-big.jpg 2x">
 			</div>
 			<div class="title">
 				<h1>Suneet Mehta</h1>
