Social links now open in new tab

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 	</div>
 	<footer>
 		<div class="container-2">
-			<a href="https://github.com/Suneet-M" class="social">
+			<a href="https://github.com/Suneet-M" class="social" target="_blank">
 				<img src="icons/github.png" alt="github">
 			</a>
-			<a href="https://www.facebook.com/suneet.manish.mehta" class="social">
+			<a href="https://www.facebook.com/suneet.manish.mehta" class="social" target="_blank">
 				<img src="icons/facebook.png" alt="facebook">
 			</a>
-			<a href="https://twitter.com/QriouslyYours" class="social">
+			<a href="https://twitter.com/QriouslyYours" class="social" target="_blank">
 				<img src="icons/twitter.png" alt="twitter" >
 			</a>
 			<p class="copyright">
