Add blank <a> tag for project links

--- a/index.html
+++ b/index.html
@@ -48,24 +48,32 @@
 					<hr>
 				</div>
 				<section>
-					<img src="img/memory.jpg" alt="memory game" class="work">
-					<hr width="1">
-					<p id="memory">Memory&nbsp;game</p>
+					<a href="#" target="_blank">
+						<img src="img/memory.jpg" alt="memory game" class="work">
+						<hr width="1">
+						<p id="memory">Memory&nbsp;game</p>
+					</a>
 				</section>
 				<section>
-					<img src="img/arcade.png" alt="arcade game" class="work">
-					<hr width="1">
-					<p id="arcade">Classic&nbsp;Arcade Game&nbsp;Clone</p>
+					<a href="#" target="_blank">
+						<img src="img/arcade.png" alt="arcade game" class="work">
+						<hr width="1">
+						<p id="arcade">Classic&nbsp;Arcade Game&nbsp;Clone</p>
+					</a>
 				</section>
 				<section>
-					<img src="img/feed.jpg" alt="feed reader" class="work">
-					<hr width="1">
-					<p id="reader">Feed&nbsp;Reader Testing</p>
+					<a href="#" target="_blank">
+						<img src="img/feed.jpg" alt="feed reader" class="work">
+						<hr width="1">
+						<p id="reader">Feed&nbsp;Reader Testing</p>
+					</a>
 				</section>
 				<section>
-					<img src="img/reviews.png" alt="restaurant review app" class="work">
-					<hr width="1">
-					<p id="review">Restaurant&nbsp;Review App</p>
+					<a href="#" target="_blank">
+						<img src="img/reviews.png" alt="restaurant review app" class="work">
+						<hr width="1">
+						<p id="review">Restaurant&nbsp;Review App</p>
+					</a>
 				</section>
 			</div>
 		</main>
