feat: Add github links for first 3 projects

--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
 					<hr>
 				</div>
 				<section>
-					<a href="#" target="_blank">
+					<a href="https://www.github.com/Suneet-M/Memory-Game/" target="_blank">
 						<img src="img/memory.jpg" alt="memory game" class="work">
 						<hr width="1">
 						<p id="memory">Memory&nbsp;game</p>
 					</a>
 				</section>
 				<section>
-					<a href="#" target="_blank">
+					<a href="https://www.github.com/Suneet-M/Arcade-Game/" target="_blank">
 						<img src="img/arcade.png" alt="arcade game" class="work">
 						<hr width="1">
 						<p id="arcade">Classic&nbsp;Arcade Game&nbsp;Clone</p>
 					</a>
 				</section>
 				<section>
-					<a href="#" target="_blank">
+					<a href="https://www.github.com/Suneet-M/Feed-Reader-Testing/" target="_blank">
 						<img src="img/feed.jpg" alt="feed reader" class="work">
 						<hr width="1">
 						<p id="reader">Feed&nbsp;Reader Testing</p>
