--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
 				</div>
 				<section>
 					<a href="https://www.github.com/Suneet-M/Memory-Game/" target="_blank">
-						<img src="img/memory.jpg" alt="memory game" class="work">
+						<img src="img/memory.jpg" alt="" class="work">
 						<hr width="1">
 						<p id="memory">Memory&nbsp;game</p>
 					</a>
 				</section>
 				<section>
 					<a href="https://www.github.com/Suneet-M/Arcade-Game/" target="_blank">
-						<img src="img/arcade.png" alt="arcade game" class="work">
+						<img src="img/arcade.png" alt="" class="work">
 						<hr width="1">
 						<p id="arcade">Classic&nbsp;Arcade Game&nbsp;Clone</p>
 					</a>
 				</section>
 				<section>
 					<a href="https://www.github.com/Suneet-M/Feed-Reader-Testing/" target="_blank">
-						<img src="img/feed.jpg" alt="feed reader" class="work">
+						<img src="img/feed.jpg" alt="" class="work">
 						<hr width="1">
 						<p id="reader">Feed&nbsp;Reader Testing</p>
 					</a>
 				</section>
 				<section>
 					<a href="#" target="_blank">
-						<img src="img/reviews.png" alt="restaurant review app" class="work">
+						<img src="img/reviews.png" alt="" class="work">
 						<hr width="1">
 						<p id="review">Restaurant&nbsp;Review App</p>
 					</a>
