feat: Add final project link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					</a>
 				</section>
 				<section>
-					<a href="#" target="_blank">
+					<a href="https://www.github.com/Suneet-M/Restaurant-Reviews/" target="_blank">
 						<img src="img/reviews.png" alt="" class="work">
 						<hr width="1">
 						<p id="review">Restaurant&nbsp;Review App</p>
